transfer changes from webapp

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3017,6 +3017,13 @@
   "claim.ldap_to_email.pwdNotMatch": "Passwords do not match.",
   "claim.ldap_to_email.switchTo": "Switch account to email/password",
   "claim.ldap_to_email.title": "Switch AD/LDAP Account to Email/Password",
+  "claim.ldap_to_oauth.enterLdapPwd": "{ldapPassword}:",
+  "claim.ldap_to_oauth.ldapPasswordError": "Please enter your AD/LDAP password.",
+  "claim.ldap_to_oauth.ldapPwd": "AD/LDAP Password",
+  "claim.ldap_to_oauth.ssoNote": "You must already have a valid {type} account",
+  "claim.ldap_to_oauth.ssoType": "Upon claiming your account, you will only be able to login with {type} SSO. Your AD/LDAP credentials will no longer allow access to Mattermost.",
+  "claim.ldap_to_oauth.switchTo": "Switch Account to {type}",
+  "claim.ldap_to_oauth.title": "Switch AD/LDAP Account to {type} SSO",
   "claim.oauth_to_email.confirm": "Confirm Password",
   "claim.oauth_to_email.description": "Upon changing your account type, you will only be able to login with your email and password.",
   "claim.oauth_to_email.enterNewPwd": "Enter a new password for your {site} email account",
@@ -5539,6 +5546,7 @@
   "user.settings.security.oauthAppsHelp": "Applications act on your behalf to access your data based on the permissions you grant them.",
   "user.settings.security.office365": "Office 365",
   "user.settings.security.oneSignin": "You may only have one sign-in method at a time. Switching sign-in method will send an email notifying you if the change was successful.",
+  "user.settings.security.oneSigninTitle": "You current sign in method is {method}",
   "user.settings.security.openid": "OpenID",
   "user.settings.security.password": "Password",
   "user.settings.security.passwordError": "Must be {min}-{max} characters long.",
@@ -5566,13 +5574,13 @@
   "user.settings.security.passwordSamlCantUpdate": "This field is handled through your login provider. If you want to change it, you need to do so through your login provider.",
   "user.settings.security.retypePassword": "Retype New Password",
   "user.settings.security.saml": "SAML",
-  "user.settings.security.switchEmail": "Switch to Using Email and Password",
-  "user.settings.security.switchGitlab": "Switch to Using GitLab SSO",
-  "user.settings.security.switchGoogle": "Switch to Using Google SSO",
-  "user.settings.security.switchLdap": "Switch to Using AD/LDAP",
-  "user.settings.security.switchOffice365": "Switch to Using Office 365 SSO",
-  "user.settings.security.switchOpenId": "Switch to Using OpenID SSO",
-  "user.settings.security.switchSaml": "Switch to Using SAML SSO",
+  "user.settings.security.switchEmail": "Switch to Email and Password",
+  "user.settings.security.switchGitlab": "Switch to GitLab SSO",
+  "user.settings.security.switchGoogle": "Switch to Google SSO",
+  "user.settings.security.switchLdap": "Switch to AD/LDAP",
+  "user.settings.security.switchOffice365": "Switch to Office 365 SSO",
+  "user.settings.security.switchOpenId": "Switch to OpenID SSO",
+  "user.settings.security.switchSaml": "Switch to SAML SSO",
   "user.settings.security.title": "Security Settings",
   "user.settings.security.viewHistory": "View Access History",
   "user.settings.security.viewHistory.icon": "Access History Icon",
