--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5200,6 +5200,7 @@
   "user_groups_modal.addPeople": "Add People",
   "user_groups_modal.addPeopleTitle": "Add people to {group}",
   "user_groups_modal.allGroups": "All Groups",
+  "user_groups_modal.archivedGroups": "Archived Groups",
   "user_groups_modal.archiveGroup": "Archive Group",
   "user_groups_modal.createNew": "Create Group",
   "user_groups_modal.createTitle": "Create Group",
@@ -5219,8 +5220,10 @@
   "user_groups_modal.myGroups": "My Groups",
   "user_groups_modal.name": "Name",
   "user_groups_modal.nameIsEmpty": "Name is a required field.",
+  "user_groups_modal.restoreGroup": "Restore group",
   "user_groups_modal.searchGroups": "Search Groups",
   "user_groups_modal.showAllGroups": "Show: All Groups",
+  "user_groups_modal.showArchivedGroups": "Show: Archived Groups",
   "user_groups_modal.showMyGroups": "Show: My Groups",
   "user_groups_modal.title": "User Groups",
   "user_groups_modal.unknownError": "An unknown error has occurred.",
