--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2645,6 +2645,7 @@
   "api.team.join_team.post_and_forget": "{username} joined the team.",
   "api.team.leave.left": "{username} left the team.",
   "api.team.remove_user_from_team.removed": "{removedUsername} was removed from the team.",
+  "app_bar.marketplace": "App Marketplace",
   "app.channel.post_update_channel_purpose_message.removed": "{username} removed the channel purpose (was: {old})",
   "app.channel.post_update_channel_purpose_message.updated_from": "{username} updated the channel purpose from: {old} to: {new}",
   "app.channel.post_update_channel_purpose_message.updated_to": "{username} updated the channel purpose to: {new}",
@@ -4231,7 +4232,7 @@
   "navbar_dropdown.logout": "Log Out",
   "navbar_dropdown.manageGroups": "Manage Groups",
   "navbar_dropdown.manageMembers": "Manage Members",
-  "navbar_dropdown.marketplace": "Marketplace",
+  "navbar_dropdown.marketplace": "App Marketplace",
   "navbar_dropdown.menuAriaLabel": "main menu",
   "navbar_dropdown.nativeApps": "Download Apps",
   "navbar_dropdown.profileSettings": "Profile",
