--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -1341,6 +1341,7 @@
   "admin.license.Trial": "Trial",
   "admin.license.trial-request.accept-terms": "By clicking <strong>Start trial</strong>, I agree to the <linkEvaluation>Mattermost Software and Services License Agreement</linkEvaluation>, <linkPrivacy>Privacy Policy</linkPrivacy>, and receiving product emails.",
   "admin.license.trial-request.embargoed": "We were unable to process the request due to limitations for embargoed countries. <link>Learn more in our documentation</link>, or reach out to legal@mattermost.com for questions around export limitations.",
+  "admin.license.trial-request.embargoed.button": "Close",
   "admin.license.trial-request.startTrial": "Start trial",
   "admin.license.trial-request.title": "Experience Mattermost Enterprise Edition for free for the next 30 days. No obligation to buy or credit card required. ",
   "admin.license.trialCard.contactSales": "Contact sales",
@@ -2563,6 +2564,9 @@
   "admin.webserverModeTitle": "Webserver Mode:",
   "admin.webserverModeUncompressed": "Uncompressed",
   "admin.webserverModeUncompressedDescription": "The Mattermost server will serve static files uncompressed.",
+  "air_gapped_modal.close": "Close",
+  "air_gapped_modal.description": "To start your trial, please visit {link} and request a trial key.",
+  "air_gapped_modal.title": "Request a trial key",
   "alert_banner.tooltipCloseBtn": "Close",
   "analytics.chart.loading": "Loading...",
   "analytics.chart.meaningful": "Not enough data for a meaningful representation.",
