[MM-49251] Add day of week field and use in calendar

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5322,6 +5322,7 @@
   "user.settings.display.collapseOn": "Expanded",
   "user.settings.display.colorize": "Colorize usernames",
   "user.settings.display.colorizeDes": "Use colors to distinguish users in compact mode",
+  "user.settings.display.firstDayOfWeek": "First Day of Week",
   "user.settings.display.fixedWidthCentered": "Fixed width, centered",
   "user.settings.display.fullScreen": "Full width",
   "user.settings.display.icon": "Display Settings Icon",
@@ -5360,6 +5361,7 @@
   "user.settings.display.theme.title": "Theme",
   "user.settings.display.timezone": "Timezone",
   "user.settings.display.title": "Display Settings",
+  "user.settings.firstDayOfWeek": "Select the first day of week you want to see in the calendar.",
   "user.settings.general.close": "Close",
   "user.settings.general.confirmEmail": "Confirm Email",
   "user.settings.general.currentEmail": "Current Email",
