cleanup starter from pricing modal

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -321,7 +321,6 @@
   "admin.billing.subscription.creditCardHasExpired.description": "Please <link>update your payment information</link> to avoid any disruption.",
   "admin.billing.subscription.deleteWorkspaceModal.cancelButton": "Keep Subscription",
   "admin.billing.subscription.deleteWorkspaceModal.deleteButton": "Delete Workspace",
-  "admin.billing.subscription.deleteWorkspaceModal.downgradeButton": "Downgrade To Free",
   "admin.billing.subscription.deleteWorkspaceModal.title": "Are you sure you want to delete?",
   "admin.billing.subscription.deleteWorkspaceModal.usage": "As part of your paid subscription to Mattermost {sku} you have created ",
   "admin.billing.subscription.deleteWorkspaceModal.usageDetails": "{messageCount} messages and {fileSize} of files",
@@ -3239,12 +3238,6 @@
   "dnd_custom_time_picker_modal.defaultMsg": "Disable notifications until",
   "dnd_custom_time_picker_modal.submitButton": "Disable Notifications",
   "dnd_custom_time_picker_modal.time": "Time",
-  "downgrade_plan_modal.alert": "The unselected teams will be automatically archived in the system console, but not deleted",
-  "downgrade_plan_modal.confirmDowngrade": "Confirm Downgrade",
-  "downgrade_plan_modal.selectTeam": "Select team",
-  "downgrade_plan_modal.subtitle": "{planName} is restricted to {teams} team, {messages} messages, and {storage} file storage. <strong>If you downgrade, some data will be archived</strong>. Archived data can be accessible when you upgrade back.",
-  "downgrade_plan_modal.title": "Confirm Plan Downgrade",
-  "downgrade_plan_modal.whichTeamToUse": "Which team would you like to continue using?",
   "drafts.actions.delete": "Delete draft",
   "drafts.actions.edit": "Edit draft",
   "drafts.actions.send": "Send draft",
@@ -3398,13 +3391,6 @@
   "feedback.deleteWorkspace.feedbackPlaceholder": "Please tell us why you are deleting",
   "feedback.deleteWorkspace.feedbackTitle": "Please share your reason for deleting",
   "feedback.deleteWorkspace.submitText": "Delete Workspace",
-  "feedback.downgradeWorkspace.downgrade": "Downgrade",
-  "feedback.downgradeWorkspace.exploringOptions": "Exploring other solutions",
-  "feedback.downgradeWorkspace.feedbackTitle": "Please share your reason for downgrading",
-  "feedback.downgradeWorkspace.noLongerNeeded": "No longer need Cloud Professional features",
-  "feedback.downgradeWorkspace.technicalIssues": "Experienced technical issues",
-  "feedback.downgradeWorkspace.tellUsWhy": "Please tell us why you are downgrading",
-  "feedback.downgradeWorkspace.tooExpensive": "Too expensive",
   "feedback.other": "Other",
   "file_attachment.thumbnail": "file thumbnail",
   "file_info_preview.size": "Size ",
@@ -4534,41 +4520,35 @@
   "pricing_modal.briefing.enterprise.groupSync": "AD/LDAP group sync",
   "pricing_modal.briefing.enterprise.mobileSecurity": "Advanced mobile security via ID-only push notifications",
   "pricing_modal.briefing.enterprise.rolesAndPermissions": "Advanced roles and permissions",
-  "pricing_modal.briefing.free.gitLabGitHubGSuite": "GitLab, GitHub, and GSuite SSO",
-  "pricing_modal.briefing.free.noLimitBoards": "Unlimited board cards",
-  "pricing_modal.briefing.free.oneTeamPerWorkspace": "One team per workspace",
-  "pricing_modal.briefing.free.recentMessageBoards": "Access to {messages} most recent messages",
   "pricing_modal.briefing.fullMessageAndHistory": "Full message and file history",
   "pricing_modal.briefing.professional.advancedPlaybook": "Advanced Playbook workflows with retrospectives",
   "pricing_modal.briefing.professional.messageBoardsIntegrationsCalls": "Unlimited access to messages and files",
   "pricing_modal.briefing.professional.unLimitedTeams": "Unlimited teams",
   "pricing_modal.briefing.ssoWithGitLab": "SSO with Gitlab",
-  "pricing_modal.briefing.storageStarter": "{storage} file storage limit",
   "pricing_modal.briefing.title": "Top features",
   "pricing_modal.briefing.unlimitedPlaybookRuns": "Unlimited playbooks and runs",
   "pricing_modal.briefing.unlimitedWorkspaceTeams": "Unlimited workspace teams",
   "pricing_modal.btn.contactSales": "Contact Sales",
   "pricing_modal.btn.contactSalesForQuote": "Contact Sales",
-  "pricing_modal.btn.contactSupport": "Contact Support",
   "pricing_modal.btn.downgrade": "Downgrade",
   "pricing_modal.btn.switch_to_annual": "Switch to annual billing",
   "pricing_modal.btn.tooltip": "Only visible to system admins",
   "pricing_modal.btn.tryDays": "Try free for {days} days",
   "pricing_modal.btn.upgrade": "Upgrade",
   "pricing_modal.btn.viewPlans": "View plans",
-  "pricing_modal.extra_briefing.cloud.free.calls": "Group calls of up to 8 people, 1:1 calls, and screen share",
+  "pricing_modal.contact_us": "Contact us",
   "pricing_modal.extra_briefing.enterprise.playBookAnalytics": "Playbook analytics dashboard",
   "pricing_modal.extra_briefing.free.calls": "Voice calls and screen share",
   "pricing_modal.extra_briefing.professional.guestAccess": "Guest access with MFA enforcement",
   "pricing_modal.extra_briefing.professional.ssoadLdap": "SSO support with AD/LDAP, Google, O365, OpenID",
   "pricing_modal.extra_briefing.professional.ssoSaml": "SSO with SAML 2.0, including Okta, OneLogin, and ADFS",
+  "pricing_modal.interested_self_hosting": "Interested in self-hosting?",
+  "pricing_modal.learn_more": "Learn more",
   "pricing_modal.lookingForCloudOption": "Looking for a cloud option?",
-  "pricing_modal.lookingToSelfHost": "Looking to self-host?",
   "pricing_modal.noitfy_cta.request": "Request admin to upgrade",
   "pricing_modal.noitfy_cta.request_success": "Request sent",
   "pricing_modal.or": "or",
   "pricing_modal.plan_label_trialDays": "{days} DAYS LEFT ON TRIAL",
-  "pricing_modal.planDisclaimer.free": "This plan has data restrictions.",
   "pricing_modal.planLabel.currentPlan": "CURRENT PLAN",
   "pricing_modal.planLabel.currentPlanMonthly": "CURRENTLY ON MONTHLY BILLING",
   "pricing_modal.planLabel.mostPopular": "MOST POPULAR",
@@ -4576,7 +4556,9 @@
   "pricing_modal.planSummary.free": "Increased productivity for small teams",
   "pricing_modal.planSummary.professional": "Scalable solutions for growing teams",
   "pricing_modal.price.freeForever": "Free forever",
+  "pricing_modal.questions": "Questions?",
   "pricing_modal.rate.userPerMonth": "USD per user/month {br}<b>(billed annually)</b>",
+  "pricing_modal.reach_out": "Reach out to us and we’ll help you decide which plan is right for you and your organization.",
   "pricing_modal.reviewDeploymentOptions": "Review deployment options",
   "pricing_modal.start_trial.disclaimer": "By selecting <span>Try free for 30 days,</span> I agree to the <linkAgreement>Mattermost Software and Services License Agreement</linkAgreement>, <linkPrivacy>Privacy Policy</linkPrivacy>, and receiving product emails.",
   "pricing_modal.subtitle": "Choose a plan to get started",
