MM-50252_Refresh UI of the marketplace to improve first impressions

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3438,6 +3438,9 @@
   "filtered_user_list.userStatus": "User Status:",
   "flag_post.flag": "Save",
   "flag_post.unflag": "Remove from Saved",
+  "footer_pagination.count": "Showing {startCount, number}-{endCount, number} of {total, number}",
+  "footer_pagination.next": "Next",
+  "footer_pagination.prev": "Previous",
   "forward_post_button.label": "Forward",
   "forward_post_modal.button.cancel": "Cancel",
   "forward_post_modal.button.forward": "Forward",
@@ -4082,8 +4085,9 @@
   "mark_all_threads_as_read_modal.title": "Mark all your threads as read?",
   "marketplace_command.disabled": "The marketplace is disabled. Please contact your System Administrator for details.",
   "marketplace_command.no_permission": "You do not have the appropriate permissions to access the marketplace.",
-  "marketplace_list.count_total_page": "{startCount, number} - {endCount, number} {total, plural, one {plugin} other {plugins}} of {total, number} total",
-  "marketplace_modal.install_plugins": "Install Plugins",
+  "marketplace_modal_list.no_plugins_filter": "No results for \"{filter}\"",
+  "marketplace_modal.app_error": "Error connecting to the marketplace server. Please check your settings in the <linkConsole>System Console</linkConsole>.",
+  "marketplace_modal.install_plugins": "Install plugins",
   "marketplace_modal.installing": "Installing...",
   "marketplace_modal.list.configure": "Configure",
   "marketplace_modal.list.configure.plugin": "Configure {plugin}",
@@ -4100,12 +4104,12 @@
   "marketplace_modal.list.update_confirmation.message.warning_major_version": "This update may contain breaking changes.",
   "marketplace_modal.list.update_confirmation.message.warning_major_version_with_release_notes": "This update may contain breaking changes. Consult the [release notes](!{releaseNotesUrl}) before upgrading.",
   "marketplace_modal.list.update_confirmation.title": "Confirm Plugin Update",
-  "marketplace_modal.no_plugins": "There are no plugins available at this time.",
-  "marketplace_modal.no_plugins_installed": "You do not have any plugins installed.",
-  "marketplace_modal.search": "Search Marketplace",
+  "marketplace_modal.no_plugins": "No plugins found",
+  "marketplace_modal.no_plugins_installed": "No plugins installed found",
+  "marketplace_modal.search": "Search marketplace",
   "marketplace_modal.tabs.all_listing": "All",
-  "marketplace_modal.tabs.installed_listing": "Installed",
-  "marketplace_modal.title": "Marketplace",
+  "marketplace_modal.tabs.installed_listing": "Installed ({count})",
+  "marketplace_modal.title": "App Marketplace",
   "members_popover.button.message": "message",
   "menu.cloudFree.enterpriseTrialDescription": "Your trial is active until {trialEndDay}. Discover our top Enterprise features. <openModalLink>Learn more</openModalLink>",
   "menu.cloudFree.enterpriseTrialTitle": "Enterprise Trial",
@@ -5670,6 +5674,7 @@
   "welcome_post_renderer.user_message.first_paragraph": "Mattermost is an open source platform for secure communication, collaboration, and orchestration of work across tools and teams.",
   "welcome_post_renderer.user_message.second_paragraph": "Here is a list of commands to use to try and get familiar with the platform.",
   "welcome_post_renderer.user_message.title": "Welcome to Mattermost! :rocket:",
+  "widget.input.clear": "Clear",
   "widget.input.required": "This field is required",
   "widget.passwordInput.createPassword": "Choose a Password",
   "widget.passwordInput.password": "Password",
