MM-49984: Displaying active search backend in system console
This will be shown in the system console to let users know
which search backend is active.

Implemented via adding an extra param in the ping response.

https://mattermost.atlassian.net/browse/MM-49984

```release-note
The database section in the system console now has an additional
read-only section which shows the active search backend in use.

This can be helpful to confirm which is the currently active
search engine when there are multiple of them configured.
```

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -739,6 +739,8 @@
   "admin.database.migrations_table.name": "Name",
   "admin.database.migrations_table.title": "Applied Schema Migrations",
   "admin.database.migrations_table.version": "Version",
+  "admin.database.search_backend.title": "Active Search Backend",
+  "admin.database.search_backend.help_text": "Shows the currently active backend used for search. Values can be none, database, elasticsearch, bleve etc.",
   "admin.database.title": "Database",
   "admin.developer.title": "Developer Settings",
   "admin.elasticsearch.bulkIndexingTitle": "Bulk Indexing:",
