--- a/server/i18n/en.json
+++ b/server/i18n/en.json
@@ -2580,6 +2580,10 @@
     "translation": "CWS Server failed to delete workspace."
   },
   {
+    "id": "api.server.cws.subscribe_to_newsletter.app_error",
+    "translation": "CWS Server failed to subscribe to newsletter."
+  },
+  {
     "id": "api.server.cws.health_check.app_error",
     "translation": "CWS Server is not available."
   },
