restore the preparing workspace plugins and invite screens

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4192,13 +4192,22 @@
   "modal.manual_status.title_dnd": "Your Status is Set to \"Do Not Disturb\"",
   "modal.manual_status.title_offline": "Your Status is Set to \"Offline\"",
   "modal.manual_status.title_ooo": "Your Status is Set to \"Out of Office\"",
+  "more_channels.channel_purpose": "Channel Information: Membership Indicator: Joined, Member count {memberCount} , Purpose: {channelPurpose}",
+  "more_channels.count": "{count} Results",
+  "more_channels.count_one": "1 Result",
+  "more_channels.count_zero": "0 Results",
   "more_channels.create": "Create New Channel",
-  "more_channels.createClick": "Click 'Create New Channel' to make a new one",
-  "more_channels.join": "Join",
-  "more_channels.joining": "Joining...",
+  "more_channels.hide_joined": "Hide Joined",
+  "more_channels.hide_joined_checked": "Hide joined channels checkbox, checked",
+  "more_channels.hide_joined_not_checked": "Hide joined channels checkbox, not checked",
+  "more_channels.joined": "Joined",
+  "more_channels.membership_indicator": "Membership Indicator: Joined",
   "more_channels.next": "Next",
+  "more_channels.noArchived": "No archived channels",
   "more_channels.noMore": "No more channels to join",
+  "more_channels.noPublic": "No public channels",
   "more_channels.prev": "Previous",
+  "more_channels.searchError": "Try searching different keywords, checking for typos or adjusting the filters.",
   "more_channels.show_archived_channels": "Channel Type: Archived",
   "more_channels.show_public_channels": "Channel Type: Public",
   "more_channels.title": "More Channels",
@@ -4318,10 +4327,25 @@
   "notify_here.question": "By using **@here** you are about to send notifications to up to **{totalMembers} other people**. Are you sure you want to do this?",
   "notify_here.question_timezone": "By using **@here** you are about to send notifications to up to **{totalMembers} other people** in **{timezones, number} {timezones, plural, one {timezone} other {timezones}}**. Are you sure you want to do this?",
   "numMembers": "{num, number} {num, plural, one {member} other {members}}",
+  "onboarding_wizard.cloud_plugins.description": "Mattermost is better when integrated with the tools your team uses for collaboration. Popular tools are below, select the ones your team uses and we'll add them to your workspace. Additional set up may be needed later.",
+  "onboarding_wizard.cloud_plugins.subtitle": "(almost there!)",
+  "onboarding_wizard.cloud_plugins.title": "Welcome to Mattermost!",
+  "onboarding_wizard.invite_members.copied_link": "Link Copied",
+  "onboarding_wizard.invite_members.copy_link": "Copy Link",
+  "onboarding_wizard.invite_members.copy_link_input": "team invite link",
+  "onboarding_wizard.invite_members.description_link": "Collaboration is tough by yourself. Invite a few team members using the invitation link below.",
+  "onboarding_wizard.invite_members.next_link": "Finish setup",
+  "onboarding_wizard.invite_members.title": "Invite your team members",
   "onboarding_wizard.launching_workspace.description": "It’ll be ready in a moment",
   "onboarding_wizard.launching_workspace.title": "Launching your workspace now",
   "onboarding_wizard.next": "Continue",
-  "onboarding_wizard.plugins.description": "Mattermost is better when integrated with the tools your team uses for collaboration. Popular tools are below, select the ones your team uses and we'll add them to your workspace. Additional set up may be needed later.",
+  "onboarding_wizard.organization.description": "We’ll use this to help personalize your workspace.",
+  "onboarding_wizard.organization.empty": "You must enter an organization name",
+  "onboarding_wizard.organization.length": "Organization name must be between {min} and {max} characters",
+  "onboarding_wizard.organization.other": "Invalid organization name: {reason}",
+  "onboarding_wizard.organization.placeholder": "Organization name",
+  "onboarding_wizard.organization.reserved": "Organization name may not <a>start with a reserved word</a>.",
+  "onboarding_wizard.organization.title": "What’s the name of your organization?",
   "onboarding_wizard.plugins.github": "GitHub",
   "onboarding_wizard.plugins.github.tooltip": "Subscribe to repositories, stay up to date with reviews, assignments",
   "onboarding_wizard.plugins.gitlab": "GitLab",
@@ -4329,12 +4353,13 @@
   "onboarding_wizard.plugins.jira": "Jira",
   "onboarding_wizard.plugins.jira.tooltip": "Create Jira tickets from messages in Mattermost, get notified of important updates in Jira",
   "onboarding_wizard.plugins.marketplace": "More tools can be added once your workspace is set up. To see all available integrations, <a>visit the Marketplace.</a>",
-  "onboarding_wizard.plugins.subtitle": "(almost there!)",
-  "onboarding_wizard.plugins.title": "Welcome to Mattermost!",
   "onboarding_wizard.plugins.todo": "To do",
   "onboarding_wizard.plugins.todo.tooltip": "A plugin to track Todo issues in a list and send you daily reminders about your Todo list",
   "onboarding_wizard.plugins.zoom": "Zoom",
   "onboarding_wizard.plugins.zoom.tooltip": "Start Zoom audio and video conferencing calls in Mattermost with a single click",
+  "onboarding_wizard.previous": "Previous",
+  "onboarding_wizard.self_hosted_plugins.description": "Choose the tools you work with, and we'll add them to your workspace. Additional set up may be needed later.",
+  "onboarding_wizard.self_hosted_plugins.title": "What tools do you use?",
   "onboarding_wizard.skip": "Skip for now",
   "onboarding_wizard.submit_error.generic": "Something went wrong. Please try again.",
   "onboardingTask.checklist.completed_subtitle": "We hope Mattermost is more familiar now.",
@@ -4413,7 +4438,6 @@
   "payment_form.no_billing_address": "No billing address added",
   "payment_form.no_credit_card": "No credit card added",
   "payment_form.saved_payment_method": "Saved Payment Method",
-  "payment_form.shipping_address": "Shipping Address",
   "payment_form.zipcode": "Zip/Postal Code",
   "payment.card_number": "Card Number",
   "payment.field_required": "This field is required",
