MM-49869 - add channels button lhs sidebar (#22701)

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4854,6 +4854,7 @@
   "shortcuts.team_nav.prev.mac": "Previous team:\t⌘|⌥|Up",
   "shortcuts.team_nav.switcher": "Navigate to a specific team:\tCtrl|Alt|[1-9]",
   "shortcuts.team_nav.switcher.mac": "Navigate to a specific team:\t⌘|⌥|[1-9]",
+  "sidebar_left.add_channel_cta_dropdown.dropdownAriaLabel": "Add Channel Dropdown",
   "sidebar_left.add_channel_dropdown.browseChannels": "Browse Channels",
   "sidebar_left.add_channel_dropdown.browseOrCreateChannels": "Browse or create channels",
   "sidebar_left.add_channel_dropdown.createCategory": "Create New Category",
@@ -4863,6 +4864,7 @@
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
   "sidebar_left.add_channel_dropdown.work_template": "Create from a template",
   "sidebar_left.add_channel_dropdown.work_template_extra": "Set up a channel with linked boards, and playbooks",
+  "sidebar_left.addChannelsCta": "Add channels",
   "sidebar_left.channel_filter.filterByUnread": "Filter by unread",
   "sidebar_left.channel_filter.filterUnreadAria": "unreads filter",
   "sidebar_left.channel_filter.showAllChannels": "Show all channels",
@@ -4901,6 +4903,7 @@
   "sidebar_left.sidebar_channel_menu.unfavoriteChannel": "Unfavorite",
   "sidebar_left.sidebar_channel_menu.unmuteChannel": "Unmute Channel",
   "sidebar_left.sidebar_channel_menu.unmuteConversation": "Unmute Conversation",
+  "sidebar_left.sidebar_channel_navigator.addChannelsCta": "Add channels",
   "sidebar_left.sidebar_channel_navigator.inviteUsers": "Invite Users",
   "sidebar_left.sidebar_channel.selectedCount": "{count} selected",
   "sidebar_right_menu.console": "System Console",
