--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4965,7 +4965,8 @@
   "start_cloud_trial.modal.failed": "Failed",
   "start_cloud_trial.modal.gettingTrial": "Getting Trial...",
   "start_cloud_trial.modal.loaded": "Loaded!",
-  "start_trial_form_modal.failureModal.subtitle": "There was in issue processing your trial request. Please try again or contact support.",
+  "start_trial_form_modal.failureModal.subtitle": "There was in issue processing your trial request.",
+  "start_trial_form_modal.failureModal.subtitle2": "Please try again or contact support.",
   "start_trial_form_modal.failureModal.title": "Please try again",
   "start_trial_form.company_name": "Company Name",
   "start_trial_form.company_size": "Company Size",
